<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#007AFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/TopText"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="My Profile"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="@+id/toolbar3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/arrow_back"
        android:contentDescription="Back button"
        app:layout_constraintEnd_toStartOf="@+id/TopText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/toolbar3"
        app:srcCompat="@drawable/arrow_back" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="365dp"
        android:layout_height="570dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3">

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/baseline_account_circle_24" />

            <Button
                android:id="@+id/button"
                android:layout_width="153dp"
                android:layout_marginStart="20dp"

                android:backgroundTint="#007AFF"
                android:layout_height="wrap_content"
                android:text="Change Photo" />

        </LinearLayout>

        <TextView
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="Name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar3"
            app:layout_constraintTop_toTopOf="@+id/toolbar3" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Your Name"
            android:padding="5dp" />

        <TextView
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="Email"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar3"
            app:layout_constraintTop_toTopOf="@+id/toolbar3" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="your.email@example.com" />

        <TextView
            android:id="@+id/phoneField"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="Phone"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar3"
            app:layout_constraintTop_toTopOf="@+id/toolbar3" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="(123) 456-7890"
            android:paddingBottom="10dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#34C759"
            android:padding="10dp"
            android:text="Save Changes"
            android:textColor="@color/white" />


    </LinearLayout>
    <include
        android:id="@+id/bottomNavigationViewEntrant"
        layout="@layout/entrant_bottom_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolbar4"
        app:layout_constraintBottom_toBottomOf="@id/toolbar4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>