...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RegisterButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:background="@drawable/register_device_button"
        android:paddingVertical="18dp"
        android:text="Continue with This Device"
...
